# MarS

./: .gitignore  .readthedocs.yaml  README.md  __init__.py  pyproject.toml  requiriemnts.txt  spin_system.py
docs/: fix_rst.py  requirements.txt
docs/source/: conf.py  examples.rst  index.rst  installation.rst  instruction.txt  mars.constants.rst  mars.mesher.axial_neigbour.rst  mars.mesher.delanay_mesh.rst  mars.mesher.delanay_neigbour.rst  mars.mesher.experimental.rst  mars.mesher.general_mesh.rst  mars.mesher.rst  mars.optimization.fitter.rst  mars.optimization.interactions.rst  mars.optimization.objectives.rst  mars.optimization.rst  mars.particles.nuclei_db_creation.rst  mars.particles.rst  mars.particles.typed_particles.rst  mars.population.contexts.rst  mars.population.matrix_generators.rst  mars.population.rk4.rst  mars.population.rst  mars.population.tr_utils.rst  mars.population.transform.rst  mars.reader.bruker_reader.rst  mars.reader.rst  mars.res_field_algorithm.rst  mars.res_freq_algorithm.rst  mars.rst  mars.save_procedures.rst  mars.secular_approximation.rst  mars.spectra_manager.rst  (+12 more)
examples/: Her_poyme_chto.ipynb  Untitled.ipynb
machine_learning/: loss_functions.py
mars/: __init__.py  concatination.py  constants.py  multiplication.py  res_field_algorithm.py  res_freq_algorithm.py  save_procedures.py  secular_approximation.py  spectra_manager.py  spectra_processing.py  spectral_integration.py  spin_model.py  spin_system.py  utils.py
mars_epr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mesher/: axial_neigbour.py
optimization/: fitter.py  interactions.py
tests/: KeOps.ipynb  optimization_res.eps  optimization_res_2.eps  optimization_test.ipynb  spectra.eps  tensor_product.ipynb  time_test.ipynb
(+395 files in other folders)
