[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MarS"
version = "0.0.1"
authors = [
    {name = "Arkady Samsonenko", email = "a.samsonenko@tomo.nsc.ru"},
]
description = "A library for computation CW and time resolved spectra"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE.md"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.4",
    "torch>=2.2",
    "scipy>=1.14",
    "sklearn",
    "torchdiffeq"
]

[project.optional-dependencies]
opt = ["optuna>=4.3", "nevergrad>=1.0.12", "optuna_dashboard"]
plot = ["seaborn", "plotly"]

[project.urls]
"Homepage" = "https://github.com/ArkadySamsonenkoWork/MarS"
"Telegram" = "@Arkady_Samsonenko"
"Mail" = "a.samsonenko@tomo.nsc.ru"
